# octostarfish

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  run.py
octostarfish/: __init__.py  exceptions.py  octostarfish.py  query_gists.py  query_stars.py  repo.py
tests/: test_octostarfish.py
