[tool.poetry]
name = "octostarfish"
version = "1.1.1"
description = ""
authors = ["Justin Myers <justin@justinmyers.net>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
python-dotenv = {extras = ["cli"], version = "^0.13.0"}
gitpython = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
